# chatServer

./: .gitignore  CMakeLists.txt
config/: app.json
db/: init_sql.py
db/init_sql/: 0000_set_updated_at_function.sql  0001_users.sql  0002_device_sessions.sql  0003_friend_requests.sql  0004_friendships.sql  0005_conversations.sql  0006_conversation_members.sql  0007_messages.sql  0008_attachments.sql
docs/: auth-http-api.md  auth-http-fields.md  chatclient-architecture.md  client-conversation-models.md  conversation-http-api.md  development.md  drogon-guide.md  file-http-api.md  friend-http-api.md  im-system-design.md  progress.md  user-http-api.md  ws-api.md  ws-architecture.md  ws-protocol.md
src/: main.cpp
src/app/: application.cpp  application.h
src/infra/id/: id_generator.cpp  id_generator.h
src/infra/log/: app_logger.cpp  app_logger.h
src/infra/security/: password_hasher.cpp  password_hasher.h  token_provider.cpp  token_provider.h
src/infra/ws/: connection_registry.cpp  connection_registry.h
src/protocol/dto/auth/: login_dto.h  register_dto.h
src/protocol/dto/conversation/: conversation_dto.h
src/protocol/dto/file/: file_dto.h
src/protocol/dto/friend/: friend_dto.h
src/protocol/dto/user/: profile_dto.h
src/protocol/dto/ws/: ws_auth_dto.h  ws_business_dto.h  ws_envelope_dto.h
src/protocol/error/: error_code.h
src/repository/: attachment_repository.cpp  attachment_repository.h  conversation_repository.cpp  conversation_repository.h  device_session_repository.cpp  device_session_repository.h  friend_repository.cpp  friend_repository.h  user_repository.cpp  user_repository.h
src/service/: auth_service.cpp  auth_service.h  avatar_service.cpp  avatar_service.h  conversation_service.cpp  conversation_service.h  file_service.cpp  file_service.h  friend_service.cpp  friend_service.h  realtime_push_service.cpp  realtime_push_service.h  service_error.h  user_service.cpp  user_service.h  ws_message_service.cpp  ws_message_service.h  ws_session_service.cpp  ws_session_service.h
src/storage/: file_storage.cpp  file_storage.h  local_storage.cpp  local_storage.h  minio_storage.h
src/transport/http/: auth_controller.cpp  auth_controller.h  conversation_controller.cpp  conversation_controller.h  file_controller.cpp  file_controller.h  friend_controller.cpp  friend_controller.h  user_controller.cpp  user_controller.h
src/transport/ws/: chat_ws_controller.cpp  chat_ws_controller.h
